# simplemind-oct

./: README.md  _config.yml  configuration.md  documentation.md  examples.md  getting-started.md  index.md  tutorials.md
simplemind/: .gitignore  =2.12  Dockerfile  FAQ.md  README.md  README_MOD.md  assemble_plan.py  controller.py  controller_utils.py  dashboard.py  env.yaml  gdownload_data.py  pyproject.toml  run_plan.py  start_mind.py  tool_doc.py  upload_dataset.py  upload_listen.py
simplemind/dev/core_test/: README.md
simplemind/dev/core_test/plans/: test_01_plan.json  test_02_plan.json  test_03_plan.json  test_04_plan.json  test_05_plan.json  test_06_plan.json  test_07_plan.json  test_08_plan.json  test_09_plan.json  test_10_plan.json  test_11_plan.json  test_12_plan.json  test_13_plan.json  test_14_plan.json  (+2 more)
simplemind/docs/: cognitive_ai.md  controller.md  dashboard.md  data_download.md  docker.md  exercise1.md  exercise2.md  exercise3.md  exercise4.md  gpu1.md  input_parameters.md  process_cleanup.md  tool_envs.md  tune_pytorch.md  vscode.md
simplemind/example_output/runtime/: plan.json
simplemind/plans/biomech_video/: README.md  force_plate_region_plan.json  heel_paths_plan.json  heel_strike_plan.json  input_image_plan.json
simplemind/plans/cxr/: clahe_image_plan.json  lungs_plan.json  trachea_plan.json
simplemind/plans/kidney_ct/: input_image_plan.json  kidney_plan.json
simplemind/plans/liver_ct/: README.md  multi_organ_plan.json
simplemind/plans/lungs/: input_image_plan.json
simplemind/plans/medsam2/: README.md  input_image_plan.json  medsam2_plan.json  prompt_mask_plan.json
simplemind/plans/oct/: input_image_plan.json  left_half_image_plan.json  refraction_corrected_image_plan.json  right_half_image_plan.json  ss_detection_left_half_image_plan.json  ss_detection_right_half_image_plan.json
simplemind/smtool/: sm_image.py
simplemind/tools/: README.md
simplemind/tools/biomech_video_mask_reader/: biomech_video_mask_reader.py
simplemind/tools/reformat/: reformat.py
simplemind/weights/oct/: desktop.ini
(+71 files in other folders)
